src/objects/Ad_Placement_Event_Specific__c.object
<CustomObject>
    <description>PMC</description>
    <fields>
        <fullName>Cost__c</fullName>
        <label>Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>End__c</fullName>
        <description>End</description>
        <inlineHelpText>End Date</inlineHelpText>
        <label>End</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <description>Notes</description>
        <inlineHelpText>Notes</inlineHelpText>
        <label>Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Outreach_Dictionary_Event__c</fullName>
        <formula>Outreach_Dictionary__r.Name &amp;&quot; - &quot;&amp; Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Outreach Dictionary &amp; Event</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Outreach_Dictionary__c</fullName>
        <label>Ad Campaign / Event Type</label>
        <referenceTo>Media_Outlet__c</referenceTo>
        <relationshipLabel>Ad Placement / Event Specifics</relationshipLabel>
        <relationshipName>Referral_Sources</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Outreach_ID__c</fullName>
        <formula>Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Marketing Info ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start__c</fullName>
        <description>Start</description>
        <inlineHelpText>Start Date</inlineHelpText>
        <label>Start</label>
        <type>Date</type>
    </fields>
    <label>Ad Placement / Event Specifics</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Start__c</columns>
        <columns>End__c</columns>
        <columns>Cost__c</columns>
        <columns>Outreach_Dictionary__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>My_Events</fullName>
        <columns>NAME</columns>
        <columns>Start__c</columns>
        <columns>End__c</columns>
        <columns>Cost__c</columns>
        <columns>Outreach_Dictionary__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <label>My Events</label>
    </listViews>
    <nameField>
        <label>Ad Placement / Event Specifics</label>
        <type>Text</type>
    </nameField>
    <namedFilters>
        <fullName>nf_01IU0000000Fc0bMAC_00NU0000002UlWIMA0</fullName>
        <active>true</active>
        <field>Prospects__c.Outreach_Event__c</field>
        <filterItems>
            <field>$Source.Outreach_Source__c</field>
            <operation>equals</operation>
            <valueField>Ad_Placement_Event_Specific__c.Outreach_Dictionary__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Prospect_Outreach Event</name>
        <sourceObject>Prospects__c</sourceObject>
    </namedFilters>
    <pluralLabel>Ad Placement / Event Specifics</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Outreach_Dictionary</fullName>
        <active>true</active>
        <description>Outreach Dictionary</description>
        <errorConditionFormula>ISNULL( Outreach_Dictionary__c)</errorConditionFormula>
        <errorMessage>Outreach Dictionary is required</errorMessage>
    </validationRules>
</CustomObject>